--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "source": "https://github.com/phpcfdi/image-captcha-resolver-boxfactura-ai"
     },
     "require": {
-        "php": ">=8.1",
+        "php": "^8.2",
         "ankane/onnxruntime": "^0.2.3",
         "imagine/imagine": "^1.3",
         "phpcfdi/image-captcha-resolver": "^0.2.4",
