--- a/.github/workflows/sonarqube-cloud.yml
+++ b/.github/workflows/sonarqube-cloud.yml
@@ -31,6 +31,10 @@ jobs:
           extensions: gd
           coverage: xdebug
           tools: composer:v2
+      - name: Set up environment
+        run: cp tests/.env.example tests/.env
+      - name: Get model files
+        run: bin/download-model model
       - name: Get composer cache directory
         id: composer-cache
         run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
